Bug fix and format adjust

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </style>
     <!-- Google font -->
 
-    <title>Boyo Web App</title>
+    <title>Poyao Wang</title>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
