--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,33 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="This is the website of Poyao Wang"
-    />
+    <meta name="description" content="This is the website of Poyao Wang" />
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Poyao Wang">
+    <meta itemprop="description" content="This is the website of Poyao Wang">
+    <meta itemprop="image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
+    
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://poyao-wang.web.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Poyao Wang">
+    <meta property="og:description" content="This is the website of Poyao Wang">
+    <meta property="og:image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Poyao Wang">
+    <meta name="twitter:description" content="This is the website of Poyao Wang">
+    <meta name="twitter:image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+          manifest.json provides metadata used when your web app is installed on a
+          user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+        -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
+          Notice the use of %PUBLIC_URL% in the tags above.
+          It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
