--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,37 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="This is the website of Poyao Wang" />
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Poyao Wang">
-    <meta itemprop="description" content="This is the website of Poyao Wang">
-    <meta itemprop="image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
-    
+    <meta itemprop="name" content="Poyao Wang" />
+    <meta itemprop="description" content="This is the website of Poyao Wang" />
+    <meta
+      itemprop="image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
+    />
+
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://poyao-wang.web.app">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Poyao Wang">
-    <meta property="og:description" content="This is the website of Poyao Wang">
-    <meta property="og:image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
-    
+    <meta property="og:url" content="https://poyao-wang.web.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Poyao Wang" />
+    <meta
+      property="og:description"
+      content="This is the website of Poyao Wang"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
+    />
+
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Poyao Wang">
-    <meta name="twitter:description" content="This is the website of Poyao Wang">
-    <meta name="twitter:image" content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Poyao Wang" />
+    <meta
+      name="twitter:description"
+      content="This is the website of Poyao Wang"
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
           manifest.json provides metadata used when your web app is installed on a
@@ -63,14 +78,9 @@
     ></script>
     <!-- Bootstrap JS file -->
 
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-    </style>
-    <!-- Google font -->
-
     <title>Poyao Wang</title>
   </head>
-  <body data-spy="scroll" data-target=".navbar" data-offset="50">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
