Font related fix

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,13 @@
     ></script>
     <!-- Bootstrap JS file -->
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Font Noto Sans TC -->
+
     <title>Poyao Wang</title>
   </head>
   <body>
