--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,36 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="This is the website of Poyao Wang" />
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Poyao Wang" />
+    <meta itemprop="description" content="This is the website of Poyao Wang" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      itemprop="image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
+    />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://poyao-wang.web.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Poyao Wang" />
+    <meta
+      property="og:description"
+      content="This is the website of Poyao Wang"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
+    />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Poyao Wang" />
+    <meta
+      name="twitter:description"
+      content="This is the website of Poyao Wang"
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/poyao-wang/my-profile-data/raw/master/profile/my-web-app.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +51,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Poyao Wang</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
